--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
 	<meta charset="UTF-8">
-	<script src="./dist/index.js" type="module"></script>
+	<script src="./preview.ts" type="module"></script>
 </head>
 
 <body>
-	<my-counter></my-counter>
+	<story-book></story-book>
 </body>
 
 </html>
