--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
+	<script src="./src" type="module"></script>
 	<script src="./preview.ts" type="module"></script>
 </head>
 
